# NaviNIBS_Cobot

./: README.md  addon_configuration.json  pyproject.toml  pytest.ini
Devices/: CobotClient.cp311-win_amd64.pyd  CobotTargetingController.py  GenerateMotiveToolFiles.py
Devices/CobotConnector/: CobotActionSequence.py  CobotConnectorClient.py  CobotConnectorServer.py  __init__.py
Devices/resources/: Axilum-TMS-Cobot-Left-World.rom  Axilum-TMS-Cobot-Right-World.rom  CobotTools.json  MagV Cool-B65 AP CO holder.stl  MagVenture Cool B65 AP CO.stl  SP_2131_U_01.ply  TMS-Cobot-2 Wrist QC (sp_2131_u_asm-indF) v6.ply  WorkspaceCobot.stl  WorkspaceCobot_v2.stl  base.ply  j1.ply  j2.ply  j3.ply  j4.ply  j5.ply  j6.ply  sp_2131_a.ply  world_left.stl  world_right.stl
Navigator/GUI/ViewPanels/: CheckForceSensorDialog.py  CobotDebugPanel.py  CobotViewLayers.py  CobotWidgets.py  NavigatePanelWithCobot.py
Navigator/Model/: CobotConfiguration.py
tests/: test_CobotIntegration.py
