[project]
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)"
]

[tool.poetry]
name = "NaviNIBS_Cobot"
version = "0.1.1"
description = "NaviNIBS addon for Cobot control"
authors = ["Christopher C. Cline <chriscline@users.noreply.github.com>"]
license = "LGPLv3"
packages = [
    { include = "NaviNIBS_Cobot", from = ".." }
]
include = [
    { path = "Devices/**/*.*", format=["sdist", "wheel"] },
    { path = "Navigator/**/*.*", format=["sdist", "wheel"] },
    { path = "*.json", format=["sdist", "wheel"] }
]
exclude = ["dist"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
navinibs = [
    #{version="^0.0.2", develop=true},
    {path="../../../../dist/navinibs-0.1.3-py3-none-any.whl"}
]
